# laraxum

./: Cargo.toml  README.md
laraxum/: Cargo.toml
laraxum/src/: backend.rs  controller.rs  de.rs  env.rs  error.rs  frontend.rs  lib.rs  macros.rs  model.rs  request.rs
laraxum/src/controller/: auth.rs  extract.rs  mod.rs  serve.rs
laraxum/src/model/: mod.rs  request.rs  types.rs
laraxum_macros/: Cargo.toml  README.md
laraxum_macros/src/: db.rs  lib.rs  router.rs  utils.rs
laraxum_macros/src/db/: docs.md  mod.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs
laraxum_macros/src/router/: docs.md  mod.rs  stage1.rs  stage2.rs  stage3.rs
laraxum_macros/src/utils/: borrow.rs  collections.rs  mod.rs  multiplicity.rs  parse.rs  syn.rs
