[package]
name = "laraxum"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/coolCucumber-cat/laraxum.git"
readme = "../README.md"
description = """
A framework built on top of Axum and SQLX to simplify creating database servers.
"""
categories = ["database"]

[dependencies]
laraxum_macros = { version = "0.1.2", optional = true }
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
mime = "0.3.17"
bytes = "1.10.1"
chrono = { version = "0.4.41", optional = true }
time = { version = "0.3.41", optional = true }

[features]
default = ["mysql", "macros"]
macros = ["dep:laraxum_macros"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
chrono = ["dep:chrono"]
time = ["dep:time"]
try_blocks = ["laraxum_macros?/try_blocks"]

[lints.rust]
async_fn_in_trait = "allow"
