[package]
name = "laraxum"
version = "0.1.4"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/coolCucumber-cat/laraxum.git"
readme = "../README.md"
description = """
Create API database servers easily using Axum and SQLX.
"""
categories = ["database"]

[dependencies]
laraxum_macros = { version = "0.1.5", optional = true }
sqlx = "0.8.6"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
mime = "0.3.17"
bytes = "1.10.1"
thiserror = "2.0.17"
jsonwebtoken = { version = "10.0.0", optional = true }
chrono = { version = "0.4.42", optional = true }
time = { version = "0.3.44", optional = true }

[features]
default = ["mysql", "macros", "auth_token"]
macros = ["dep:laraxum_macros"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
chrono = ["dep:chrono", "sqlx/chrono"]
time = ["dep:time", "sqlx/time"]
auth_token = ["dep:jsonwebtoken"]

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]
arithmetic_side_effects = "warn"
panic = "warn"
expect_used = "warn"
unwrap_used = "warn"
indexing_slicing = "warn"
cognitive_complexity = "warn"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

similar_names = "allow"
option_if_let_else = "allow"
