[package]
name = "laraxum_macros"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/coolCucumber-cat/laraxum.git"
readme = "README.md"
description = """
Macros for the laraxum crate
"""
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.97"
syn = { version = "2.0.105", features = ["full", "extra-traits"] }
darling = "0.21.1"
quote = "1.0.40"
fmt2 = "0.3.4"

[features]
default = ["mysql"]
mysql = []
postgres = []
sqlite = []
