[package]
name = "laraxum_macros"
version = "0.2.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/coolCucumber-cat/laraxum.git"
readme = "README.md"
description = """
Macros for the laraxum crate
"""
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
syn = { version = "2.0.108", features = ["full", "extra-traits"] }
darling = "0.21.3"
quote = "1.0.41"
fmt2 = "0.3.4"

[features]
default = ["mysql"]
mysql = []
postgres = []
sqlite = []

[lints.clippy]
arithmetic_side_effects = "warn"
panic = "warn"
expect_used = "warn"
unwrap_used = "warn"
indexing_slicing = "warn"
cognitive_complexity = "warn"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

similar_names = "allow"
option_if_let_else = "allow"
